# promy-backend

./: .gitignore  Dockerfile  pyproject.toml
.ebextensions/: nginx.config
promy_api/: main.py
promy_api/dto/: company_dto.py  offer_dto.py
promy_api/infra/: custom_type.py  env.py
promy_api/infra/db/: base.py
promy_api/infra/db/model/: company_model.py  offer_model.py
promy_api/infra/s3/: base.py
promy_api/router/: companies.py  offers.py
promy_api/util/: company_util.py  offer_util.py
