[tool.poetry]
name = "promy-api"
version = "0.1.0"
description = ""
authors = ["Sungwoo Park <codest99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "promy_api.main:dev"
prod = "promy_api.main:prod"
